package factory.PizzaCase.pizza002;

/**
 * ClassName: BJCheesePizza
 * Description:
 * date: 2021/11/27 下午4:07
 *
 * @author yimingyu
 * @version 1.0
 * @since JDK 1.8
 */
public class BJCheesePizza extends Pizza{
    public void prepare() {
        setName("北京的芝士pizza");
    }
}
