package factory.PizzaCase.pizza002;

/**
 * ClassName: BJPepperPizza
 * Description:
 * date: 2021/11/27 下午4:06
 *
 * @author yimingyu
 * @version 1.0
 * @since JDK 1.8
 */
public class BJPepperPizza extends Pizza{
    public void prepare() {
        setName("北京的胡椒pizza");
    }
}
