package factory.PizzaCase.pizza002;

/**
 * ClassName: LDCheesePizza
 * Description:
 * date: 2021/11/27 下午4:08
 *
 * @author yimingyu
 * @version 1.0
 * @since JDK 1.8
 */
public class LDCheesePizza extends Pizza{
    public void prepare() {
        setName("伦敦的芝士pizza");
    }
}
