package factory.PizzaCase.pizza002;

/**
 * ClassName: LDPepperPizza
 * Description:
 * date: 2021/11/27 下午4:08
 *
 * @author yimingyu
 * @version 1.0
 * @since JDK 1.8
 */
public class LDPepperPizza extends Pizza{
    public void prepare() {
        setName("伦敦的胡椒pizza");
    }
}
